deployments/k8s/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: knxvault
  namespace: knxvault
  labels:
    app.kubernetes.io/name: knxvault
spec:
  serviceName: knxvault-raft
  replicas: 3
  podManagementPolicy: Parallel
  selector:
    matchLabels:
      app.kubernetes.io/name: knxvault
  template:
    metadata:
      labels:
        app.kubernetes.io/name: knxvault
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics"
        prometheus.io/port: "8200"
    spec:
      serviceAccountName: knxvault
      securityContext:
        runAsNonRoot: true
        runAsUser: 65532
        runAsGroup: 65532
        fsGroup: 65532
      containers:
        - name: knxvault
          image: knxvault:0.1.0-dev
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 8200
              protocol: TCP
            - name: raft
              containerPort: 63001
              protocol: TCP
          volumeMounts:
            - name: raft-data
              mountPath: /var/lib/knxvault/raft
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 5
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /ready
              port: http
            initialDelaySeconds: 5
            periodSeconds: 10
            timeoutSeconds: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: "1"
              memory: 1Gi
          securityContext:
            allowPrivilegeEscalation: false
            readOnlyRootFilesystem: true
            capabilities:
              drop: ["ALL"]
  volumeClaimTemplates:
    - metadata:
        name: raft-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 10Gi
