deployments/k8s/service-raft.yaml
# Copyright Kubenexis Systems Private Limited.
# SPDX-License-Identifier: Apache-2.0

apiVersion: v1
kind: Service
metadata:
  name: knxvault-raft
  namespace: knxvault
  labels:
    app.kubernetes.io/name: knxvault
spec:
  clusterIP: None
  publishNotReadyAddresses: true
  selector:
    app.kubernetes.io/name: knxvault
  ports:
    - name: raft
      port: 63001
      targetPort: raft
